# hart

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  TODO.MD  binary.manifest  packaged.sha1.remote  packaged.sha1.where
data/assets/BSD licence/Skab/: licence.txt
data/assets/BSD licence/Skab/char_1/: char_1.asset  meta.json
data/assets/Public Domain/: DungeonCrawl_ProjectUtumnoTileset.asset
data/assets/game/: DungeonCrawl_ProjectUtumnoTileset.tsx  test.asset  test.tmx
data/assets/game/entities/: test_entity.asset  test_entity.json
data/assets/game/entity_templates/: test_entity_template.asset  test_entity_template.json
data/assets/game/fbs/: gamestate.fbs  inputactions.fbs  layertype.fbs  level.fbs  player.fbs  sprite.fbs  spriteanimtype.fbs  test.fbs  tileset.fbs
data/assets/game/levels/: testbed.tmx  testbed_level.asset
data/assets/game/levels/tilesets/: final_tileset.asset
data/assets/game/materials/: sprite.asset  sprite.json
data/assets/game/materials/setups/: sprite_setup.asset  sprite_setup.json
data/assets/game/palettes/: light_blue_grey.gpl
data/assets/game/shaders/sprite/: ps_sprite.asset  ps_sprite.sc  vs_sprite.asset  vs_sprite.sc
data/assets/game/sprites/loading_disc.sprite/: loading_disc.#asset  loading_disc.asset  meta.json
data/assets/hart/: syscollection.asset
data/assets/hart/fbs/: entity.fbs  entitytemplate.fbs  material.fbs  materialsetup.fbs  opt.fbs  renderstate.fbs  resourcecollection.fbs  resourcedb.fbs  shader.fbs  techniquetype.fbs  texture.fbs  textureformats.fbs  uuid.fbs  vec_matrix.fbs
data/assets/hart/materials/: debug.asset  debug.json  imgui.asset  imgui.json  test_material.asset  test_material.json
data/assets/hart/materialsetups/: debug_setup.asset  debug_setup.json  imgui_setup.asset  imgui_setup.json  test_material_setup.asset  test_material_setup.json
data/assets/hart/shaders/debug/: ps_debug.asset  vs_debug.asset  vs_debug.sc
data/assets/hart/shaders/imgui/: fs_imgui.asset  fs_imgui_colour.asset  vs_imgui.asset  vs_imgui.sc  vs_imgui_colour.asset
data/assets/hart/textures/: tmw_desert_spacing.asset
data/builder/: builder.py  builderconfig.json  create_resource_db.py  gen_py_fbs.py  process_blob.py  process_collection.py  process_entity.py  process_entity_template.py  process_fbs.py  process_level.py  process_mesh.py  process_shader.py  process_sprite.py  process_texture.py  process_tileset.py  update_prerequisites.py
data/builder/flatbuffers/: builder.py  compat.py  encode.py  number_types.py  packer.py  table.py
data/builder/gamecommon/: utils.py
game/: .clang-format  CMakeLists.txt  system.ini
game/src/: collision_world.cpp  collision_world.h  game_state.cpp  game_state.h  level.cpp  level.h  main.cpp  poly_utils.h  sprite.cpp  sprite.h  sprite_renderer.cpp  sprite_renderer.h
hart/: .clang-format  CMakeLists.txt
hart/include/hart/: config.h  hart.h
hart/include/hart/base/: atomic.h  crt.h  debug.h  filesystem.h  freelist.h  matrix.h  scopestack.h  std.h  threadlocalstorage.h  time.h  util.h  uuid.h  vec.h
hart/include/hart/core/: configoptions.h  engine.h  entity.h  entityactory.h  input.h  objectfactory.h  resourcemanager.h  taskgraph.h  utf8.h
hart/include/hart/lfds/: lfds.h
hart/include/hart/render/: material.h  program.h  render.h  shader.h  state.h  technique.h  texture.h  vertexdecl.h
hart/include/imgui/: imconfig.h  imgui.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
hart/include/win32/hart/: windows.inc
hart/include/win32/hart/base/: mutex.h  semaphore.h  thread.h
hart/src/common/base/: atomic.cpp  scopestack.cpp
hart/src/common/core/: configoptions.cpp  engine.cpp  entity.cpp  entityfactory.cpp  input.cpp  objectfactory.cpp  resourcemanager.cpp  taskgraph.cpp  utf8.cpp
hart/src/common/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
hart/src/common/lfds/: lfds_freelist.cpp  lfds_queue.cpp
hart/src/common/lfds/lfds/: lfds_utils.inl
hart/src/common/render/: material.cpp  render.cpp  shader.cpp  state.cpp  texture.cpp
hart/src/win32/base/: filesystem.cpp  thread.cpp  threadlocalstorage.cpp  time.cpp
scripts/: binary_asset_package.py  binary_asset_unpackage.py  build_clean_data.bat  build_data.bat  clang_format_files.py  clang_format_source.bat  download_binary_data.bat  preview_upload_binary_data.bat  upload_binary_data.bat
scripts/githooks/: post-checkout  pre-commit
